Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-7638

[Python] Segfault when inspecting dataset.Source with invalid file/partitioning

    XMLWordPrintableJSON

Details

    Description

      Getting a segfault with:

      In [1]: import pyarrow.dataset as ds                                                                                                                                                                               
      
      In [2]: !touch test_empty.txt                                                                                                                                                                                      
      
      In [3]: source_factory = ds.source("test_empty.txt", partitioning=ds.partitioning(field_names=['a', 'b']))                                                                                                         
      
      In [4]: source_factory.inspect()                                                                                                                                                                                   
      Segmentation fault (core dumped)
      

      Didn't yet further investigate what might be the reason (there are several "wrong" things here: it's an empty file, it's not a valid file for the parquet format, the partitioning does not match the files, etc)

      Attachments

        Issue Links

          Activity

            People

              fsaintjacques Francois Saint-Jacques
              jorisvandenbossche Joris Van den Bossche
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h