ARROW-7638: [C++][Dataset] Fix a segfault in DirectoryPartitioningFactory